Fix the subscribe email for wrapping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,6 +223,10 @@ footer {
     background-color: rgba(0, 0, 0, .5);
 }
 
+#email {
+    width:150px;
+}
+
 /*Subscribe*/
 .cta {
     background-color: #D44D5C;
